--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.scss" />
   </head>
   <body>
     <h1 class="text">TEXT</h1>
+    <script src="src/app.js"></script>
   </body>
 </html>
